Add MySQL container to docker-compose for self-contained deployment

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ GARMIN_EMAIL=your_garmin_email@example.com
 GARMIN_PASSWORD=your_garmin_password
 
 # MySQL Database Connection
-# Connect to your existing MySQL container
-MYSQL_HOST=mysql_container_name_or_ip
+MYSQL_HOST=walks-mysql
 MYSQL_PORT=3306
 MYSQL_USER=walks_user
 MYSQL_PASSWORD=your_secure_mysql_password
 MYSQL_DATABASE=walks_tracker
+MYSQL_ROOT_PASSWORD=your_secure_root_password
 
 # Application Settings
 DEBUG=false
