--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ pydantic==2.6.1
 pydantic-settings==2.2.1
 sqlalchemy==2.0.25
 aiomysql==0.2.0
+cryptography==42.0.2
 garminconnect==0.2.19
 python-dotenv==1.0.1
